--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,38 +1,6 @@
-server:
-  port: 8080
 spring:
   application:
     name: example-service
-  datasource:
-    url: jdbc:postgresql://${DB_SERVER:localhost:5432}/example_service
-    username: postgres
-    password: postgres
-  jpa:
-    hibernate:
-      ddl-auto: none
-    properties:
-        hibernate:
-            hbm2ddl:
-            auto: none
-            dialect: org.hibernate.dialect.PostgreSQLDialect
-            format_sql: true
-            jdbc:
-            time_zone: UTC
-    show-sql: true
-    database: postgresql
-    generate-ddl: true
-    open-in-view: true
-  liquibase:
-    change-log: classpath:db/db.changelog-master.xml
-    contexts: dev, faker
-    enabled: true
-logging:
-  level:
-    liquibase: INFO
-    com.insy2s: DEBUG
-    org.springframework.web: DEBUG
-springdoc:
-  api-docs:
-    path: /api-docs
-  swagger-ui:
-    path: /swagger-ui.html
+  profiles:
+    active: dev
+
