--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,39 +1,13 @@
 server:
-  port: 8080
+  port: 9578
 spring:
-  application:
-    name: example-service
   datasource:
     url: jdbc:postgresql://${DB_SERVER:localhost:5432}/example_service
     username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    hibernate:
-      ddl-auto: none
-    properties:
-      hibernate:
-        hbm2ddl:
-        auto: none
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-        jdbc:
-        time_zone: UTC
-    show-sql: true
-    database: postgresql
-    generate-ddl: true
-    open-in-view: true
+    password: SXAQ?Y6D3#AtPeCn
   liquibase:
-    change-log: classpath:db/db.changelog-master.xml
-    contexts: dev, faker
-    enabled: true
+    contexts: prod
 logging:
   level:
-    liquibase: INFO
-    com.insy2s: DEBUG
-    org.springframework.web: DEBUG
-springdoc:
-  api-docs:
-    path: /api-docs
-  swagger-ui:
-    path: /swagger-ui.html
+    com.insy2s: INFO
+    org.springframework.web: INFO
