--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,4 +3,21 @@ spring:
     name: example-service
   profiles:
     active: dev
-
+  datasource:
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        hbm2ddl:
+        auto: none
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        jdbc:
+        time_zone: UTC
+    show-sql: true
+    database: postgresql
+    open-in-view: true
+  liquibase:
+    change-log: classpath:db/db.changelog-master.xml
+    enabled: true
