[PM] - added checkstyle to the project

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <springdoc-openapi-ui.version>2.3.0</springdoc-openapi-ui.version>
         <springdoc.javadoc.scribe.version>0.15.0</springdoc.javadoc.scribe.version>
         <spring-boot.version>3.2.0</spring-boot.version>
+        <checkstyle-maven-plugin.version>3.3.0</checkstyle-maven-plugin.version>
     </properties>
     <dependencies>
         <dependency>
@@ -170,8 +171,28 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>${checkstyle-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>validate</id>
+                        <phase>validate</phase>
+                        <configuration>
+                            <configLocation>checkstyle.xml</configLocation>
+                            <consoleOutput>true</consoleOutput>
+                            <failsOnError>true</failsOnError>
+                        </configuration>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
+
     <profiles>
         <profile>
             <id>dev</id>
@@ -195,5 +216,18 @@
             </properties>
         </profile>
     </profiles>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>${checkstyle-maven-plugin.version}</version>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
